テキスト分類処理を追加

--- a/NasBertApp/NasBertApp.csproj
+++ b/NasBertApp/NasBertApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Emoji.Wpf" Version="0.3.4" />
     <PackageReference Include="MaterialDesignColors" Version="2.1.2" />
     <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="0.2.8" />
